# backend/src/Application/Policy/ReadModel/PolicyBlockerCode.php
@@ -8,4 +8,5 @@ enum PolicyBlockerCode: string
 {
     case ConfigurationIncomplete = 'configuration_incomplete';
     case ExecutorEvidenceMissing = 'executor_evidence_missing';
+    case RetentionExecutionForbiddenForPbsTarget = 'retention_execution_forbidden_for_pbs_target';
 }
